# inotives_cryptos

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
analytics/: dbt_project.yml  profiles.yml  pyproject.toml
apps/bots/: pyproject.toml
apps/bots/backtest/: engine.py  models.py  runner.py
apps/bots/common/: config.py  db.py
apps/bots/common/connections/: base.py  ccxt_rest.py  paper.py
apps/bots/common/connections/exchanges/: cryptocom.py
apps/bots/pricing_bot/: main.py
apps/bots/tests/backtest/: test_engine.py
apps/bots/tests/connections/: test_paper.py
apps/bots/tests/pricing_bot/: test_main.py
apps/bots/tests/strategies/: test_dca_grid.py
apps/bots/trader_bot/: hybrid_coordinator.py  main.py
apps/bots/trader_bot/strategies/: __init__.py  base.py  dca_grid.py  trend_following.py
apps/pipelines/: Dockerfile  prefect.yaml  pyproject.toml
apps/pipelines/src/: config.py  main.py
apps/pipelines/src/api/: __init__.py  coingecko.py  coinmarketcap.py
apps/pipelines/src/flows/: coingecko.py  coingecko_coins_list.py  coingecko_ohlcv_1d.py  coingecko_platforms.py  compute_indicators_1d.py  compute_market_regime_1d.py  daily_pipeline.py
bots/data_bot/: main.py
bots/pricing_bot/: main.py
bots/stock_movers_bot/: main.py
bots/trader_bot/: hybrid_coordinator.py  main.py
common/: config.py  db.py
common/api/: __init__.py
common/connections/: __init__.py
common/data/: coingecko_sync.py  indicators.py  market_regime.py  ohlcv.py
common/tools/: allowlist_asset.py  allowlist_network.py  fetch_token_list.py  manage_assets.py  manage_cron.py  manage_trading.py  setup_paper_trading.py
configs/envs/: .env.example
db/init/: 01_create_databases.sh
db/migrations/: 20260228045202_add_utilities.sql  20260228045440_create_users.sql  20260228045547_create_blockchains.sql  20260228045547_create_networks.sql  20260307000000_create_assets.sql  20260307000001_create_network_assets.sql  20260307000002_create_data_sources.sql  20260307000003_create_asset_metrics_1d.sql  20260307000004_create_source_mappings.sql  20260307000005_create_venue_tables.sql  (+20 more)
docs/: advanced_dca_grid_fix_idle_too_long.md  advanced_dca_grid_strategy_full_system.md  hybrid_dca_grid_trading_bots.md  hybrid_grid_master_plan.md  hybrid_grid_master_plan_followup_001.md
scripts/: allowlist_asset.py  allowlist_network.py  manage_trading.py  run_backtest_sweep.py  seed_asset_source_mappings.py  seed_assets_from_csv.py  seed_data_sources_from_csv.py  seed_metrics_1d_from_csv.py  seed_networks_from_csv.py  setup_paper_trading.py
tests/: conftest.py
(+28 files in other folders)
