[project]
name = "inotives-tradings"
version = "0.1.0"
description = "Automated crypto trading system — data ingestion, indicators, and strategy execution."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "ccxt>=4.0.0",
    "pydantic-settings>=2.2.0",
    "requests>=2.31.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "yfinance>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "bots"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
