[project]
name = "bots"
version = "0.1.0"
description = "Pricing bot and trader bot for automated trading strategies."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0", # Async PostgreSQL driver
    "ccxt>=4.0.0", # Unified exchange API (Binance, etc.)
    "pydantic-settings>=2.2.0", # Settings/config loading from env
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "pricing_bot", "trader_bot"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
