[project]
name = "fetchers"
version = "0.1.0"
description = "Prefect-based data fetchers for crypto market data (CoinGecko, CoinMarketCap, etc.)"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0.0", # Workflow orchestration
    "asyncpg>=0.29.0", # Async PostgreSQL driver
    "requests>=2.31.0", # HTTP client for REST APIs
    "pydantic-settings>=2.2.0", # Config/env loading
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
